// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a large button correctly 1`] = `
<button
  className="sc-ifAKCX dRhFMX"
/>
`;

exports[`Button should render a medium button correctly 1`] = `
<button
  className="sc-EHOje hPWsyx"
/>
`;

exports[`Button should render a small button correctly 1`] = `
<button
  className="sc-bZQynM hAKfto"
/>
`;
